@@ -23,7 +23,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.NotDirectoryException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.junit.Test;
 
 public class SitePathsTest {
@@ -92,7 +91,7 @@ public class SitePathsTest {
 
     final String pfx = HostPlatform.isWin32() ? "C:/" : "/";
     assertThat(site.resolve(pfx + "a")).isNotNull();
-    assertThat(site.resolve(pfx + "a")).isEqualTo(Paths.get(pfx + "a"));
+    assertThat(site.resolve(pfx + "a")).isEqualTo(Path.of(pfx + "a"));
   }
 
   private static Path random() throws IOException {
